Added Flexbox code

--- a/practice_workbench/Day_04_Flexbox.html
+++ b/practice_workbench/Day_04_Flexbox.html
@@ -11,10 +11,11 @@
     </head>
     <body>
         <div class="NavBar">
-            <div class="nav-item">Home</div>
-            <div class="nav-item">Home</div>
-            <div class="nav-item">Home</div>
-            <div class="nav-item">Home</div>
+            <div class="nav-item icon" alt = "profile_logo"><img src="../assets/images/profile-picture.jpg "></div>
+            <div class="nav-item" alt = "nav-button">What we Do</div>
+            <div class="nav-item" alt = "nav-button">Testimonials</div>
+            <div class="nav-item" alt = "nav-button">About us</div>
+            <div class="nav-item" alt = "nav-button">Contact Us</div>
         </div>
 
     </body>
