Added currying question

--- a/practice_workbench/Day_03_responsive_image.html
+++ b/practice_workbench/Day_03_responsive_image.html
@@ -46,7 +46,7 @@
       srcset="../assets/images/image-480.jpg 480w, ../assets/images/image-960.jpg 960w, ../assets/images/image-1440.jpg 1440w"
       alt="This is a jpeg image"
       loading="lazy"
-      sizes="(min-width: 1200px) 960px, 100vw"
+      sizes="(max-width: 600px) 480px, 100vw"
       />
 
  
