--- a/practice_workbench/Day_04_Flexbox.html
+++ b/practice_workbench/Day_04_Flexbox.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Flexbox WorkBench</title>
-          <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- This line is IMPORTANT -->
+          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link
       rel="stylesheet"
